--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,12 @@
         }
     ],
     "require": {
+        "php": ">=7.1",
         "laravel/framework": "^7.0"
+    },
+    "require-dev": {
+        "orchestra/testbench": "^5.0",
+        "phpunit/phpunit": "^9.0"
     },
     "autoload": {
         "psr-4": {
@@ -19,11 +24,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "PaulhenriL\\LaravelEngine\\Tests\\": "tests/"
+            "PaulhenriL\\LaravelEngine\\Tests\\": "tests/",
+            "PaulhenriL\\LaravelEngine\\Tests\\FakeEngine\\": "tests/FakeEngine/src"
         }
-    },
-    "require-dev": {
-        "orchestra/testbench": "^4.0",
-        "phpunit/phpunit": "^8.5"
     }
 }
