--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "require": {
         "php": ">=7.1",
-        "laravel/framework": "^7.0"
+        "laravel/framework": "^7.0",
+        "paulhenri-l/laravel-task-runner": "^1.0"
     },
     "require-dev": {
         "orchestra/testbench": "^5.0",
